--- a/search-app/package.json
+++ b/search-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
@@ -19,6 +20,7 @@
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.2",
     "next": "14.2.9",
+    "random-profile-generator": "^2.3.0",
     "react": "^18",
     "react-dom": "^18",
     "shadcn": "^2.0.6",
